--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.2",
+    "next-seo": "^6.8.0",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
